--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "ethereum-cryptography": "^3.0.0",
+    "express": "^4.18.1",
+    "y": "^0.3.2"
   }
 }
